# mailingester

./: Dockerfile  README.md  config.json  pyproject.toml
.github/workflows/: ci.yml  publish-container-image.yml  release.yml  test.yml
src/mailingester/: __init__.py  extractors.py  handlers.py  models.py  storage.py
tests/: factories.py  mail.py  test_email.py  test_extractor.py  test_handler.py  test_malawi_extractor.py  test_strip_footer.py  test_text_to_path.py  test_zambia_extractor.py
