[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools-scm>=8"]

[project]
name = "mailingester"
description = "Extract information from emails"
authors = [
    {name = "IDEMS International", email = "contact@idems.international"},
]
readme = "README.md"
requires-python = ">=3.11"
keywords = []
license = {text = "GPL-3.0-or-later"}
classifiers = []
dependencies = [
    "aiosmtpd",
    "google-cloud-storage",
    "pydantic-settings",
    "python-slugify",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "pytest",
]
build = [
    "build",
]

[project.urls]
Homepage = "https://github.com/IDEMSInternational/mailingester"
Repository = "https://github.com/IDEMSInternational/mailingester"

[tool.setuptools_scm]
version_file = "src/mailingester/_version.py"
